<resources>
    <string name="insert_data">INSERT DATA</string>
    <string name="display_data">DISPLAY ALL</string>
    <string name="search_data">SEARCH</string>
    <string name="update_data">UPDATE DATA</string>
    <string name="DogName">DogName</string>
    <string name="DogBreedName">DogBreedName</string>
    <string name="DogColour">DogColour</string>
    <string name="DogAge">DogAge</string>
    <string name="SAVE">SAVE</string>
    <string name="app_name">name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_Dog">name_Dog</string>

</resources>