<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
   >

    <Button
        android:id="@+id/insert_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/insert_data"
        android:layout_marginLeft="@dimen/margin_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        android:layout_marginTop="@dimen/btn1_margintop"

        />

    <Button
        android:id="@+id/display_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/display_data"
        app:layout_constraintEnd_toEndOf="@id/insert_btn"
        app:layout_constraintStart_toStartOf="@id/insert_btn"
        app:layout_constraintVertical_bias="0.023"
        app:layout_constraintTop_toBottomOf="@id/insert_btn"
        android:layout_marginTop="@dimen/btn2_margintop"/>

    <Button
        android:id="@+id/search_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/search_data"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="@id/insert_btn"
        app:layout_constraintTop_toBottomOf="@id/display_btn"
        app:layout_constraintVertical_bias="0.016"
        android:layout_marginTop="@dimen/btn2_margintop"/>


    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
         android:onClick="onClick"
        app:layout_constraintTop_toBottomOf="@id/search_btn"
        app:layout_constraintVertical_bias="0.965" />


</androidx.constraintlayout.widget.ConstraintLayout>